--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_packs_with_chunks_tag 'application', 'hello_vue', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body><!--
   <p class="navbar-text float-right">
 <% if user_signed_in? %>
   Logged in as <strong><%= current_user.email %></strong>.
@@ -19,7 +19,7 @@
   <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
   <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
 <% end %>
-</p>
+</p>-->
     <%= yield %>
   </body>
 </html>
