--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,8 @@
     <%= csrf_meta_tags %>
     <%= include_gon %>
 
-
-
+    <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_packs_with_chunks_tag 'application', 'hello_vue', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag "application", media: 'all', 'data-turbolinks-track': 'reload'%>
 
   </head>
 
